2010-03-04  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] qwebelement.h does not include QtCore headers correctly
        https://bugs.webkit.org/show_bug.cgi?id=35748

        The header files of QtCore must be included as QtCore/foo.h.

        See also http://bugreports.qt.nokia.com/browse/QTBUG-8661

        * Api/qwebelement.h:

2010-01-28  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Do not set the combobox font on Maemo5 and S60; use the
        default instead.

        * WebCoreSupport/QtFallbackWebPopup.cpp:
        (WebCore::QtFallbackWebPopup::populate):

2010-01-28  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Support kinetic scrolling on Maemo 5

        https://bugs.webkit.org/show_bug.cgi?id=34267

        Patch by Ralf Engels <ralf.engels@nokia.com> and
        Robert Griebl <rgriebl@trolltech.com>

        * Api/qwebview.cpp:
        (QWebViewKineticScroller::QWebViewKineticScroller):
        (QWebViewKineticScroller::eventFilter):
        (QWebViewKineticScroller::currentFrame):
        (QWebViewKineticScroller::scrollingFrameAt):
        (QWebViewKineticScroller::attachToWidget):
        (QWebViewKineticScroller::removeFromWidget):
        (QWebViewKineticScroller::positionRange):
        (QWebViewKineticScroller::position):
        (QWebViewKineticScroller::viewportSize):
        (QWebViewKineticScroller::setPosition):
        (QWebView::QWebView):

2010-01-29  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann

        Disable auto-uppercase and predictive text on Maemo5, just like the
        build-in MicroB Browser.

        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::setInputMethodState):

2010-01-28  Trond Kjernåsen <trond@trolltech.com>

        Reviewed by Simon Hausmann.
